--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "author": "tehPotatoKing (http://tehpotatoking.com)",
-  "name": "tehpotatoking",
+  "author": "niteLite (https://niteLite.io)",
+  "name": "niteLite",
   "description": "Personal Blog",
   "version": "1.0.0",
-  "homepage": "http://tehpotatoking.com",
+  "homepage": "https://niteLite.io",
   "repository": {
     "type": "git",
     "repository": "none"
