--- a/config.json
+++ b/config.json
@@ -74,11 +74,11 @@
       "3 stars",
       "2 stars",
       "1 star",
+      "creepypasta"
       "dream",
       "mastery",
       "health",
       "money",
-      "hobby"
     ]
   },
   "pygments": true,
