Remove ruby as a dependency
- Remove compass and the ruby version of sass to get rid of ruby as a 
  dependency. Main reason is I want to consolidate the app to as few 
  dependencies as possible so that it's easier to maintain and works with 
  Windows.
- Add creepypasta to list of tags for index generation.
- Add a grunt task for rebuilding the native bindings so I can switch between 
  workstations easily.

--- a/config.json
+++ b/config.json
@@ -74,11 +74,11 @@
       "3 stars",
       "2 stars",
       "1 star",
-      "creepypasta"
+      "creepypasta",
       "dream",
       "mastery",
       "health",
-      "money",
+      "money"
     ]
   },
   "pygments": true,
