--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "grunt-bower-task": "^0.4.0",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-coffee": "^0.8.2",
-    "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-imagemin": "~2.0.1",
@@ -34,6 +33,8 @@
     "js-yaml": "^3.0.2",
     "mkdirp": "~0.5.0",
     "moment": "^2.5.1",
+    "node-sass": "^4.5.3",
+    "grunt-sass": "^2.0.0",
     "sqlite3": "^3.0.10",
     "typogr": "~0.6.x",
     "underscore": "^1.4.4",
