Add music tag and remove ones I don't plan on using

--- a/config.json
+++ b/config.json
@@ -75,10 +75,10 @@
       "2 stars",
       "1 star",
       "creepypasta",
-      "dream",
-      "mastery",
       "health",
-      "money"
+      "mastery",
+      "money",
+      "music"
     ]
   },
   "pygments": true,
