--- a/nitelite.io-web/package.json
+++ b/nitelite.io-web/package.json
@@ -10,12 +10,10 @@
   },
   "devDependencies": {
     "async": ">= 0.1.x",
-    "bower": "^1.3.12",
     "coffee-script": "~1.6.x",
     "colors": "~0.6.x",
     "glob": "^3.2.11",
     "grunt": "^0.4.5",
-    "grunt-bower-task": "^0.4.0",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-coffee": "^0.8.2",
     "grunt-contrib-concat": "^0.3.0",
@@ -25,6 +23,7 @@
     "grunt-contrib-watch": "^0.5.3",
     "grunt-css": "~0.5.4",
     "grunt-jslint": "~1.1.2",
+    "grunt-sass": "^2.0.0",
     "grunt-shell": "^0.6.4",
     "grunt-smushit": "^1.1.2",
     "grunt-wintersmith": "0.0.2",
@@ -34,10 +33,11 @@
     "mkdirp": "~0.5.0",
     "moment": "^2.5.1",
     "node-sass": "^4.5.3",
-    "grunt-sass": "^2.0.0",
     "sqlite3": "^3.0.10",
     "typogr": "~0.6.x",
     "underscore": "^1.4.4",
+    "webpack": "^4.3.0",
+    "webpack-dev-server": "^3.1.1",
     "wintersmith": "^2.0.10",
     "wintersmith-articles-helper": "0.1.x",
     "wintersmith-handleize-helper": "0.1.x",
@@ -46,5 +46,14 @@
   },
   "engine": {
     "node": "~6.11.1"
+  },
+  "dependencies": {
+    "fastclick": "^0.6.12",
+    "foundation-icons": "^1.0.1",
+    "foundation-sites": "^5.5.3",
+    "html5shiv": "^3.7.3",
+    "jquery": "^1.12.4",
+    "modernizr": "^3.6.0",
+    "spin.js": "^1.3.2"
   }
 }
