Add webpack files

--- a/nitelite.io-web/config.json
+++ b/nitelite.io-web/config.json
@@ -40,7 +40,8 @@
     "./plugins/wintersmith-handleize-helper",
     "./plugins/wintersmith-tag-pages.coffee",
     "./plugins/wintersmith-robotskirt.coffee",
-    "./plugins/related_posts.coffee"
+    "./plugins/related_posts.coffee",
+    "./node_modules/wintersmith-webpack-babel"
   ],
   "require": {
     "moment": "moment",
