Get baseline webpack functionality working
So far, it works without flicker by using the ExtractTextPlugin to manually 
embed the generated CSS file on the page.

Without this, it would flicker if the CSS were within bundle.js.

Next step is probably to see if styleloader can work.

--- a/nitelite.io-web/config.json
+++ b/nitelite.io-web/config.json
@@ -41,7 +41,7 @@
     "./plugins/wintersmith-tag-pages.coffee",
     "./plugins/wintersmith-robotskirt.coffee",
     "./plugins/related_posts.coffee",
-    "./node_modules/wintersmith-webpack-babel"
+    "./plugins/wintersmith-webpack.coffee"
   ],
   "require": {
     "moment": "moment",
