--- a/nitelite.io-web/package.json
+++ b/nitelite.io-web/package.json
@@ -12,11 +12,11 @@
     "async": ">= 0.1.x",
     "autoprefixer": "^8.2.0",
     "coffee-loader": "^0.9.0",
-    "coffee-script": "~1.6.x",
+    "coffeescript": "^2.2.3",
     "colors": "~0.6.x",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "glob": "^3.2.11",
     "grunt": "^0.4.5",
@@ -37,9 +37,11 @@
     "html-webpack-plugin": "^3.1.0",
     "jade": "^1.0.2",
     "js-yaml": "^3.0.2",
+    "json-loader": "^0.5.7",
     "mkdirp": "~0.5.0",
     "moment": "^2.5.1",
     "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.3",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.7",
     "sqlite3": "^3.0.10",
@@ -49,6 +51,7 @@
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
+    "webpack-merge": "^4.1.2",
     "wintersmith": "^2.0.10",
     "wintersmith-articles-helper": "0.1.x",
     "wintersmith-handleize-helper": "0.1.x",
@@ -59,8 +62,6 @@
     "node": "~6.11.1"
   },
   "dependencies": {
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
     "fastclick": "^0.6.12",
     "foundation-icons": "^1.0.1",
     "foundation-sites": "^5.5.3",
@@ -69,7 +70,6 @@
     "lodash": "^4.17.5",
     "modernizr": "^3.6.0",
     "moment": "^2.21.0",
-    "spin.js": "^1.3.2",
-    "wintersmith-webpack-babel": "^0.1.2"
+    "spin.js": "^1.3.2"
   }
 }
