--- a/nitelite.io-web/config.json
+++ b/nitelite.io-web/config.json
@@ -82,6 +82,9 @@
       "music"
     ]
   },
+  "webpack": {
+	"output": "main.bundle.js"
+  },
   "pygments": true,
   "ignore": [
     "README.md",
