--- a/nitelite.io-web/config.json
+++ b/nitelite.io-web/config.json
@@ -1,13 +1,5 @@
 {
-  "deployment": {
-    "remote_user": "deployer",
-    "remote_port": "1224",
-    "remote_destination": "/srv/www/nitelite.io",
-    "repo": "https://git.nitelite.io/byronsanchez/nitelite.io/",
-    "repo_branch": "master",
-    "remote_path_env": "$PATH:/usr/local/bin:$HOME/.nodejs/bin",
-    "server": "production.nitelite.io"
-  },
+  "port": 8081,
   "baseUrl": "/",
   "editor": "vim",
   "post_ext": "html",
@@ -92,7 +84,6 @@
     "Gruntfile",
     "resources",
     "vendor",
-    "scripts",
     "bin",
     "database"
   ]
