Make BOTH grunt and webpack preview work

--- a/nitelite.io-web/package.json
+++ b/nitelite.io-web/package.json
@@ -6,14 +6,16 @@
   "homepage": "https://niteLite.io",
   "private": true,
   "scripts": {
-    "build": "wintersmith build --clean",
+    "build": "npm run build-db && npm run build-site",
+    "build-site": "wintersmith build --clean",
     "build-db": "grunt build-db",
     "clean": "rm -rf ./build",
     "lint": "",
-    "server": "wintersmith preview",
-    "start": "npm run build-db && npm run build && npm run server",
+    "preview": "wintersmith preview",
+    "server": "live-server ./build",
     "test": "karma start",
-    "test-watch": "karma start --auto-watch --no-single-run"
+    "test-watch": "karma start --auto-watch --no-single-run",
+    "watch": "grunt watch"
   },
   "repository": {
     "type": "git",
@@ -32,17 +34,7 @@
     "glob": "^3.2.11",
     "grunt": "^0.4.5",
     "grunt-cli": "~0.1.11",
-    "grunt-contrib-coffee": "^0.8.2",
-    "grunt-contrib-concat": "^0.3.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-imagemin": "~2.0.1",
-    "grunt-contrib-uglify": "^0.2.7",
     "grunt-contrib-watch": "^0.5.3",
-    "grunt-css": "~0.5.4",
-    "grunt-jslint": "~1.1.2",
-    "grunt-sass": "^2.0.0",
-    "grunt-shell": "^0.6.4",
-    "grunt-smushit": "^1.1.2",
     "grunt-wintersmith": "0.0.2",
     "highlight.js": "^7.5.0",
     "html-webpack-plugin": "^3.1.0",
