Get print.scss working!
- Make sure print.scss is working via a media query
- Update npm run scripts name to introduce namespacing tasks
- Remove old script embeds since webpack is now handling those

--- a/nitelite.io-web/package.json
+++ b/nitelite.io-web/package.json
@@ -6,9 +6,9 @@
   "homepage": "https://niteLite.io",
   "private": true,
   "scripts": {
-    "build": "npm run build-db && npm run build-site",
-    "build-site": "wintersmith build --clean",
-    "build-db": "grunt build-db",
+    "build": "npm run build:db && npm run build:site",
+    "build:site": "wintersmith build --clean",
+    "build:db": "grunt build-db",
     "clean": "rm -rf ./build",
     "lint": "",
     "preview": "wintersmith preview",
