Get the docker container working!
- Just switch to using the root user since I'm only using it for development
- Update main skill tags to be music related and remove dashes from the presentation layer
- Include application.coffee in my app.coffe imports
- Update sass and webpack to use includePaths so that sass can compile successfully on docker containers
- docker containers will have node_modules installed externally to avoid conflicting with the bind mounted root project directory
  - thus, sass, webpack loaders, node modules, and webpack modules, must all be aware of the external node_modules paths
  - webpack.config.js, and all imports required, have been updated to get this working
  - the site should now build in both docker containers and outside of it (eg. a linux host just building locally)
- Updated npm scripts to have 2 primary types of tasks:
  - server + server-watch: runs the wintersmith preview server, and watch will update content without going through any major recompilation; use for editing content without rebuilding everything
  - start + start-watch: literally builds EVERYTHING- webpack, etc. - use for all other non-content source code
- Removed unused grunt tasks that have been replaced with npm scripts
- Disable isProd in webpack.config.js since it was interefering with npm run build, which I think I stopped using now

--- a/nitelite.io-deploy/Dockerfile
+++ b/nitelite.io-deploy/Dockerfile
@@ -16,20 +16,25 @@ RUN mkdir /home/wintersmith/nitelite.io
 WORKDIR /home/wintersmith/packages
 
 # Tell node where it can find the dependencies since they're not installed in the usual location
+
+# can be used with USER to install global packages to a user directory
+#RUN echo "prefix = /home/wintersmith/packages" > ~/.npmrc
+# tell node where to resolve modules in require() statements
 ENV NODE_PATH /home/wintersmith/packages/node_modules
 ENV PATH /home/wintersmith/packages/node_modules/.bin:$PATH
 
 COPY ./nitelite.io-web/package.json /home/wintersmith/packages
+#RUN chown -R wintersmith:wintersmith /home/wintersmith/packages
 RUN npm install --prefix /home/wintersmith/packages
 
 COPY ./nitelite.io-web/ /home/wintersmith/nitelite.io
 
 # This probably won't matter since we're mount binding anyway, and I'm not using docker containers for deployment yet
-RUN chown -R wintersmith:wintersmith /home/wintersmith/nitelite.io
+#RUN chown -R wintersmith:wintersmith /home/wintersmith/nitelite.io
 
 WORKDIR /home/wintersmith/nitelite.io
 
-USER wintersmith
+#USER wintersmith
 
 CMD ["npm", "run", "start"]
 
