--- a/nitelite.io-web/package.json
+++ b/nitelite.io-web/package.json
@@ -1,78 +1,73 @@
 {
   "author": "niteLite (https://niteLite.io)",
   "name": "niteLite",
-  "description": "Personal Blog",
+  "description": "Wintersmith blog about music, art, and my creative projects.",
   "version": "1.0.0",
   "homepage": "https://niteLite.io",
   "private": true,
   "scripts": {
-    "build": "npm run build:db && npm run build:site",
-    "build:site": "wintersmith build --clean",
-    "build:db": "grunt build-db",
-    "clean": "rm -rf ./build",
-    "lint": "",
-    "preview": "wintersmith preview",
-    "server": "live-server ./build",
-    "start": "npm run clean; npm run build; wintersmith-preview",
-    "test": "karma start",
-    "test-watch": "karma start --auto-watch --no-single-run",
-    "watch": "grunt watch"
+	"build": "wintersmith build --clean",
+	"clean": "rm -rf ./build",
+	"lint": "",
+	"server": "wintersmith preview",
+	"server-watch": "nodemon --exec npm run server",
+	"start": "npm run clean && npm run build && npm run server",
+	"start-watch": "nodemon --exec npm run start",
+	"test": "karma start",
+	"test-watch": "karma start --auto-watch --no-single-run"
   },
   "repository": {
-    "type": "git",
-    "repository": "none"
+	"type": "git",
+	"repository": "none"
   },
   "devDependencies": {
-    "async": ">= 0.1.x",
-    "autoprefixer": "^8.2.0",
-    "coffee-loader": "^0.9.0",
-    "coffeescript": "^2.2.3",
-    "colors": "~0.6.x",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
-    "glob": "^3.2.11",
-    "grunt": "^0.4.5",
-    "grunt-cli": "~0.1.11",
-    "grunt-contrib-watch": "^0.5.3",
-    "grunt-wintersmith": "0.0.2",
-    "highlight.js": "^7.5.0",
-    "html-webpack-plugin": "^3.1.0",
-    "jade": "^1.0.2",
-    "js-yaml": "^3.0.2",
-    "json-loader": "^0.5.7",
-    "live-server": "^1.2.0",
-    "mkdirp": "~0.5.0",
-    "moment": "^2.5.1",
-    "node-sass": "^4.8.3",
-    "postcss-loader": "^2.1.3",
-    "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^2.3.0",
-    "sass-loader": "^6.0.7",
-    "sqlite3": "^3.0.10",
-    "style-loader": "^0.20.3",
-    "typogr": "~0.6.x",
-    "underscore": "^1.4.4",
-    "webpack": "^4.3.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-merge": "^4.1.2",
-    "wintersmith": "^2.4.1",
-    "wintersmith-articles-helper": "0.1.x",
-    "wintersmith-handleize-helper": "0.1.x",
-    "wintersmith-html": "git://github.com/alnorth/wintersmith-html",
-    "wintersmith-tag-pages": "0.1.x"
+	"async": ">= 0.1.x",
+	"autoprefixer": "^8.2.0",
+	"coffee-loader": "^0.9.0",
+	"coffeescript": "^2.2.3",
+	"colors": "~0.6.x",
+	"concurrently": "^3.5.1",
+	"copy-webpack-plugin": "^4.5.1",
+	"css-loader": "^0.28.11",
+	"extract-text-webpack-plugin": "^4.0.0-beta.0",
+	"file-loader": "^1.1.11",
+	"fs-extra": "^5.0.0",
+	"glob": "^3.2.11",
+	"html-webpack-plugin": "^3.1.0",
+	"jade": "^1.0.2",
+	"js-yaml": "^3.0.2",
+	"json-loader": "^0.5.7",
+	"mkdirp": "~0.5.0",
+	"node-sass": "^4.8.3",
+	"nodemon": "^1.17.2",
+	"postcss-loader": "^2.1.3",
+	"raw-loader": "^0.5.1",
+	"resolve-url-loader": "^2.3.0",
+	"sass-loader": "^6.0.7",
+	"style-loader": "^0.20.3",
+	"typogr": "~0.6.x",
+	"webpack": "^4.3.0",
+	"webpack-cli": "^2.0.13",
+	"webpack-dev-server": "^3.1.1",
+	"webpack-merge": "^4.1.2",
+	"wintersmith": "^2.4.1",
+	"wintersmith-articles-helper": "0.1.x",
+	"wintersmith-handleize-helper": "0.1.x",
+	"wintersmith-html": "git://github.com/alnorth/wintersmith-html",
+	"wintersmith-tag-pages": "0.1.x"
   },
   "engine": {
-    "node": "~6.11.1"
+	"node": "~6.11.1"
   },
   "dependencies": {
-    "foundation-icons": "^1.0.1",
-    "foundation-sites": "^5.5.3",
-    "jquery": "^1.12.4",
-    "lodash": "^4.17.5",
-    "moment": "^2.21.0",
-    "spin.js": "^1.3.2"
+	"foundation-icons": "^1.0.1",
+	"foundation-sites": "^5.5.3",
+	"highlight.js": "^7.5.0",
+	"jquery": "^1.12.4",
+	"lodash": "^4.17.5",
+	"moment": "^2.21.0",
+	"spin.js": "^1.3.2",
+	"sqlite3": "^3.0.10",
+	"underscore": "^1.4.4"
   }
 }
