Implement database compilation without grunt and remove grunt as a dependency!

--- a/nitelite.io-deploy/Dockerfile
+++ b/nitelite.io-deploy/Dockerfile
@@ -2,6 +2,9 @@
 FROM byronsanchez/wintersmith-docker
 LABEL maintainer "Byron Sanchez <byron@hackbytes.io>"
 
+RUN apk --no-cache add \
+  sqlite
+
 RUN npm install -g webpack \
   live-server \
   coffeescript \
