Implement metadata fixes and updates

--- a/nitelite.io-web/config.json
+++ b/nitelite.io-web/config.json
@@ -11,9 +11,9 @@
     "url": "https://nitelite.io",
     "base_url": "nitelite.io",
     "title": "nitelite.io",
-    "subtitle": "Personal blog",
-    "author": "niteLite",
-    "description": "Personal blog",
+    "subtitle": "Wintersmith blog about music, art, and my creative projects.",
+    "author": "Byron Sanchez",
+    "description": "Wintersmith blog about music, art, and my creative projects.",
     "comments_enabled": true,
     "ratings_enabled": true,
     "skills_enabled": true,
@@ -21,7 +21,7 @@
     "related_entries_limit": 5,
     "date_format_post": "dddd, MMMM Do, YYYY",
     "date_format_comment": "MMMM Do, YYYY h:mm A",
-    "email": "byron@byronsanchez.io",
+    "email": "byron@nitelite.io",
     "gravatar_url": "http://www.gravatar.com/avatar",
     "gravatar_size": 64,
     "gravatar_default": "identicon"
