--- a/nitelite.io-web/package.json
+++ b/nitelite.io-web/package.json
@@ -1,6 +1,6 @@
 {
-	"author": "niteLite (https://niteLite.io)",
-	"name": "niteLite",
+	"author": "Byron Sanchez <byron@hackbytes.io>",
+	"name": "niteLite.io",
 	"description": "Wintersmith blog about music, art, and my creative projects.",
 	"version": "1.0.0",
 	"homepage": "https://niteLite.io",
@@ -63,12 +63,15 @@
 		"node": "~6.11.1"
 	},
 	"dependencies": {
+		"@fancyapps/fancybox": "^3.2.5",
 		"foundation-icons": "^1.0.1",
 		"foundation-sites": "^5.5.3",
-		"highlight.js": "^7.5.0",
+		"highlight.js": "^9.12.0",
 		"jquery": "^1.12.4",
 		"lodash": "^4.17.5",
+		"mixitup": "^3.2.2",
 		"moment": "^2.21.0",
+		"pikachoose": "^4.5.1",
 		"spin.js": "^1.3.2",
 		"sqlite3": "^3.0.10",
 		"underscore": "^1.4.4"
